--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,11 +44,12 @@
     }
   
     header nav ul li {
-      display: inline;
+      display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       list-style:none; 
       align-items: center;
+      flex-direction: row;
       
      
     }
