--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@
     header nav ul li a {
       margin: 0 30px;
       font-weight: lighter;
-      font-size: 30px;
+      font-size: 1.55vw;
     }
   
     /*styles to <hero> */
@@ -67,7 +67,10 @@
       height: 600px;
       background-size: cover;
       background-position: center;
-      position: relative;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+    
     }
   
     .hero h3 {
@@ -76,8 +79,7 @@
       font-size: 80px;
       float: right;
       position: absolute;
-      bottom: 100px;
-      right: 50px; 
+    
       
     }
     
@@ -229,17 +231,19 @@
       background: #36454f;
       width: 100%;
       padding: 40px 35px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
     }
   
     footer h2 {
-      display:inline;
+      
       color:#788586;;
       font-size: 30px;
       margin: 0; 
     }
   
     footer div {
-      float: right;
       line-height: 1.5;
       text-align: right;
       color:#788586;;
